--- a/extension/index.html
+++ b/extension/index.html
@@ -11,5 +11,6 @@
         <p>This extension does nothing right now.</p>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </html>
