Send percent data to extension popup

--- a/extension/index.html
+++ b/extension/index.html
@@ -8,7 +8,9 @@
 <body>
     <div class="container mt-3" style="width: 450px;">
         <h2 class="text-center">InstaHealth</h2>
-        <p>This extension does nothing right now.</p>
+        <p>This extension sucks right now.</p>
+        <p id="data"></p>
     </div>
 </body>
+<script src="index.js"></script>
 </html>
