Update charts with percent data

--- a/extension/index.html
+++ b/extension/index.html
@@ -8,17 +8,19 @@
     <script src="index.js" type="module"></script>
 </head>
 <body>
-    <div class="d-flex">
-        <div class="container mt-3" style="height: 100px">
+    <h2 class="text-center m-2">Instahealth!</h2>
+    <div id="text"></div>
+    <div id="charts" class="d-flex m-2">
+        <div class="container" style="height: 100px">
             <canvas id="calorieChart"></canvas>
         </div>
-        <div class="container mt-3" style="height: 100px">
+        <div class="container" style="height: 100px">
             <canvas id="proteinChart"></canvas>
         </div>
-        <div class="container mt-3" style="height: 100px">
+        <div class="container" style="height: 100px">
             <canvas id="carbChart"></canvas>
         </div>
-        <div class="container mt-3" style="height: 100px">
+        <div class="container" style="height: 100px">
             <canvas id="fatChart"></canvas>
         </div>
     </div>
