--- a/extension/index.html
+++ b/extension/index.html
@@ -7,21 +7,31 @@
     <script src="lib/dist/chart.js" type="module"></script>
     <script src="index.js" type="module"></script>
 </head>
-<body>
-    <h2 class="text-center m-2">Instahealth!</h2>
-    <div id="text"></div>
-    <div id="charts" class="d-flex m-2">
-        <div class="container" style="height: 100px">
-            <canvas id="calorieChart"></canvas>
-        </div>
-        <div class="container" style="height: 100px">
-            <canvas id="proteinChart"></canvas>
-        </div>
-        <div class="container" style="height: 100px">
-            <canvas id="carbChart"></canvas>
-        </div>
-        <div class="container" style="height: 100px">
-            <canvas id="fatChart"></canvas>
+<body style="background-color: #f0f3fa">
+    <div class="d-flex justify-content-center align-items-center m-2">
+        <h2 class="m-2">InstaHealth</h2>
+        <img id="icon" src="./icon.png" style="height: 1.7em">
+    </div>
+    <div class="m-3 text-center">
+        <h6 id="name"></h6>
+
+        <div id="charts" class="d-flex mb-5" style="font-size: 0.9em">
+            <div class="container" style="height: 100px">
+                <canvas id="calorieChart"></canvas>
+                <p id="caloriePercent"></p>
+            </div>
+            <div class="container" style="height: 100px">
+                <canvas id="proteinChart"></canvas>
+                <p id="proteinPercent"></p>
+            </div>
+            <div class="container" style="height: 100px">
+                <canvas id="carbChart"></canvas>
+                <p id="carbPercent"></p>
+            </div>
+            <div class="container" style="height: 100px">
+                <canvas id="fatChart"></canvas>
+                <p id="fatPercent"></p>
+            </div>
         </div>
     </div>
 </body>
